--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -79,6 +79,7 @@
 
   &__item {
     margin: 1rem;
+    overflow: hidden;
   }
 
   &__link {
